[gd_scene load_steps=5 format=3 uid="uid://dnqrn4gm0n2tb"]

[ext_resource type="Script" path="res://hud.gd" id="1_qh8hv"]
[ext_resource type="FontFile" uid="uid://b2is50s7536yx" path="res://fonts/Xolonium-Regular.ttf" id="2_m2dpb"]
[ext_resource type="Script" path="res://countdown.gd" id="3_25ibm"]
[ext_resource type="Script" path="res://gamesettingmenu.gd" id="4_3e5hh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_qh8hv")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_m2dpb")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_m2dpb")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_m2dpb")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Countdown" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.913725, 0.341176, 0, 1)
theme_override_fonts/font = ExtResource("2_m2dpb")
theme_override_font_sizes/font_size = 48
text = "-2.0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_25ibm")

[node name="GameSettingMenu" type="OptionButton" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 520.0
offset_right = 55.0
offset_bottom = 551.0
grow_horizontal = 2
item_count = 3
selected = 1
popup/item_0/text = "easy"
popup/item_0/id = 0
popup/item_1/text = "medium"
popup/item_1/id = 1
popup/item_2/text = "hard"
popup/item_2/id = 2
script = ExtResource("4_3e5hh")

[node name="Label" type="Label" parent="GameSettingMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -40.5
offset_right = 37.5
offset_bottom = -17.5
grow_horizontal = 2
grow_vertical = 2
text = "Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="start_game" from="." to="Countdown" method="_on_hud_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="Countdown" method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="MessageTimer" to="Countdown" method="_on_message_timer_timeout"]
[connection signal="item_selected" from="GameSettingMenu" to="GameSettingMenu" method="_on_item_selected"]
